# max-handpan

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  jsdoc.json
code/: Handpan.Push.amxd  Handpan.Soniccouture.amxd  handpan.backend.soniccouture.js  handpan.generic.js  handpan.iface.push2.js  handpan.iface.state.js  handpanBackendSoniccouture.js  handpanBackendState.js  handpanGeneric.js  handpanIfacePush2.js  handpanIfaceState.js  live.ourtrack.js  liveOurtrack.js  push2.buttonmatrix.js  push2.controller.js  push2Buttonmatrix.js  push2Controller.js  util.grid.js  utilGrid.js  velocity.js  velocity.maxpat
docs/: Architecture.md
docs/backend/: FrontendDecoder.md  Instruments.md  Retuner.md  ScaleSelector.md  Scales.md  Soniccouture.md  SoniccoutureKontakt.md
docs/frontend/: MidiLayout.md  Push2.md  TrackSelected.md  VelocityCurve.md
docs/instrument/: KeySwitchedSampler.md  Soniccouture.md
docs/soniccouture-pandrums/: samples.md
frozen/: BackendSoniccouture.amxd  FrontendPush2.amxd  SoniccoutureMk1.amxd  SoniccoutureMk2.amxd
ks-sampler/: SoniccoutureMk1.amxd  SoniccoutureMk2.amxd  ks-driver.maxpat  sc_mk1_errata.md  sc_mk1_range_id_velocity.table  sc_mk1_samples.coll  sc_mk1_samples_chain.coll  sc_mk1_samples_key.coll  sc_mk2_range_id_chain.table  sc_mk2_samples_chain.coll
parse-ableton/: .gitignore  parse-ableton.cabal  soniccouture-luts.sh  soniccouture.sh
parse-ableton/src/: CmdLine.hs  LUTs.hs  Main.hs  Util.hs
parse-ableton/src/Ableton/: MultiSampleParts.hs  Schema.hs  Types.hs
parse-ableton/src/Util/: Interval.hs  SOP.hs  SYB.hs
parse-ableton/src/Util/Interval/: Map.hs  Split.hs
parse-ableton/src/XML/: Parser.hs  TypeDriven.hs  Util.hs
parse-ableton/src/XML/TypeDriven/: API.hs  AttrNode.hs  Node.hs
patchers/: BackendGenericTonal.amxd  BackendSoniccouture.amxd  BackendSoniccoutureKontakt.amxd  FrontendPush2.amxd  frontend-decode.maxpat  frontend.js  remotedial.maxpat  retuner.js  retuner.maxpat  scaleselector.js  scaleselector.maxpat  trackselected.js  trackselected.maxpat  velocity.js
ps/: .gitignore  Makefile  max-module-prefix.js  max-module-suffix.js  packages.dhall  postprocess.sh  questions.md  sayHi.amxd  sayHi.js  spago.dhall
ps/docs/: MidiLayout.md
ps/ks-sampler/: SoniccoutureMk1.amxd  ks-driver.maxpat  ks-sampler-core.maxpat  ks-sampler-sc-mk1.amxd  ks-sampler.amxd  ks-voice.maxpat  sc_mk1_range_id_key.table  sc_mk1_range_id_selector.table  sc_mk1_samples_chain.coll  sc_mk1_samples_key.coll  sc_mk1_samples_selector.coll  sc_mk1_samples_velocity.coll  sc_mk2_range_id_key.table  sc_mk2_range_id_selector.table  sc_mk2_range_id_velocity.table  sc_mk2_samples.coll  sc_mk2_samples_key.coll  sc_mk2_samples_selector.coll  sc_mk2_samples_velocity.coll
ps/patchers/: BackendSoniccouture.amxd  Frontend.amxd  README.md  backend-soniccouture.amxd  frontend-decode.maxpat  frontend.js  inspectsimpler.js  retuner.js  velocity.js  (+7 more)
(+38 files in other folders)
