cabal-version:       >=1.10
name:                parse-ableton-files
version:             0.1.0.0
synopsis:            (Partial) parser for Ableton files
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
build-type:          Simple

executable parse-ableton
  main-is:             Main.hs
  other-modules:       Ableton.MultiSampleParts
                       Ableton.Schema
                       Ableton.Types
                       CmdLine
                       LUTs
                       Util
                       Util.Interval
                       Util.Interval.Map
                       Util.Interval.Split
                       Util.SOP
                       Util.SYB
                       XML.Aux
                       XML.Parser
                       XML.TypeDriven
                       XML.TypeDriven.API
                       XML.TypeDriven.AttrNode
                       XML.TypeDriven.Node
  build-depends:       base >=4.14 && <4.15
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , filepath
                     , fingertree
                     , generics-sop
                     , mtl
                     , optparse-applicative
                     , sop-core
                     , syb
                     , text
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wredundant-constraints
                       -Wno-unticked-promoted-constructors
  default-extensions:  ConstraintKinds
                       DataKinds
                       DeriveAnyClass
                       DeriveDataTypeable
                       DeriveFunctor
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       EmptyCase
                       EmptyDataDeriving
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       ImportQualifiedPost
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NumericUnderscores
                       PolyKinds
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns
